--- a/index.html
+++ b/index.html
@@ -90,37 +90,13 @@
                                     Home
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a href="#!" class="nav-link">
-                                    Learn
-                                    <i class="fas fa-chevron-down"></i>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item">
-                                        <a href="#" class="nav-link" target="_blank">
-                                            Litepaper
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="nav-item"> <a href="#!" class="nav-link">
-                                    Wallet
-                                    <i class="fas fa-chevron-down"></i>
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item"> 
-                                        <a onclick="addNetwork()" href="#" class="nav-link">
-                                            Metamask
-                                        </a>
-                                    </li>
-                                </ul>
-                            </li>
-                            <li class="nav-item"> <a href="#" class="nav-link" target="_blank">
-                                    Block Explorer
-                                </a>
+
+                            <li class="nav-item"> <a href="#" class="nav-link">
+                              Join Waitlist
+                             </a>
                             </li>
                         </ul>
-                        <div class="other-option"> <button onclick="addNetwork()" class="btn btn-theme">
+                        <div class="other-option"> <button class="btn btn-theme">
                                 Telegram
                             </button>
                         </div>
