--- a/index.html
+++ b/index.html
@@ -91,14 +91,17 @@
                                 </a>
                             </li>
 
-                            <li class="nav-item"> <a href="#" class="nav-link">
+                            <li class="nav-item"> <a href="https://waitlist-steel.vercel.app" class="nav-link">
                               Join Waitlist
                              </a>
                             </li>
                         </ul>
-                        <div class="other-option"> <button class="btn btn-theme">
-                                Telegram
-                            </button>
+                        <div class="other-option"> 
+                            <li class="btn btn-theme"> 
+                                <a href="https://t.me/eroticbase">
+                                    Telegram
+                                </a>
+                            </li>
                         </div>
                     </div>
                 </nav>
@@ -356,9 +359,8 @@
 
         <div class="copy-icon text-lg-center">
             <ul>
-                <li><a href="#" target="_blank"><i class="fab fa-tekegram icon"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fab fa-discord icon"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fab fa-twitter icon"></i></a></li>
+                <li><a href="https://t.me/eroticbase" target="_blank"><i class="fab fa-telegram icon"></i></a></li>
+                <li><a href="https://twitter.com/erotic_base" target="_blank"><i class="fab fa-twitter icon"></i></a></li>
             </ul>
         </div>
     </footer>
