--- a/index.html
+++ b/index.html
@@ -91,8 +91,13 @@
                                 </a>
                             </li>
 
-                            <li class="nav-item"> <a href="https://waitlist-steel.vercel.app" class="nav-link">
+                            <li class="nav-item"> <a href="https://waitlist.eroticbase.xyz" class="nav-link">
                               Join Waitlist
+                             </a>
+                            </li>
+
+                          <li class="nav-item"> <a href="https://waitlist.eroticbase.xyz" class="nav-link">
+                             Whitepaper
                              </a>
                             </li>
                         </ul>
