--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                              </a>
                             </li>
 
-                          <li class="nav-item"> <a href="https://waitlist.eroticbase.xyz" class="nav-link">
+                          <li class="nav-item"> <a href="https://eroticbase.gitbook.io/eroticbase/" class="nav-link">
                              Whitepaper
                              </a>
                             </li>
