--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                            <!-- <img src="assets/img/service/5.png" alt="img" /> -->
                            
                             <p>
-                                Countries like ........ that have prohibited adult 
+                                Countries like North Korea that have prohibited adult 
                                 contents from surfacing within their boundaries have 
                                 denied many of the freedom of pleasure.
                             </p>
