--- a/index.html
+++ b/index.html
@@ -239,51 +239,50 @@
     <!-- Service Area End -->
     
     <!-- About two Area -->
-   <!-- <section id="about-area-two" class="bg-color">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-6">
-                    <div class="anitmation-img animation-img-one">
-                        <img src="img/3.png" alt="img">
-                    </div>
-                </div>
-                <div class="col-lg-6">
-                    <div class="right-side-about">
-                        <h2>Build Unstoppable Applications</h2>
+  <section id="about-area-two" class="bg-color">
+            <div class="container">
+                    <div class="tokenomics">
+                        <h2>    Tokenonics</h2>
                         <div class="right-area-about-list">
                             <div class="media  media wow fadeInUp" data-wow-duration="2.0s" data-wow-delay=".1s">
-                                <img class="mr-3" src="assets/img/small-icon/3.png" alt="image" />
                                 <div class="media-body">
-                                    <h3 class="mt-0">Empowerment Through Decentralization</h3>
-                                    <p>
-                                        Empowerment Flourishes as Decentralization Takes Center Stage.
-                                    </p>
+                                    <h5 class="mt-0 ">Liquidity- 50%</h5>
                                 </div>
                             </div>
                             <div class="media  media wow fadeInUp " data-wow-duration="2.0s " data-wow-delay=".2s ">
-                                <img class="mr-3 " src="assets/img/small-icon/2.png" alt="image " />
-                                <div class="media-body ">
-                                    <h3 class="mt-0 ">Craft Autonomy with Smart Contracts</h3>
-                                    <p>
-                                        Craft Unparalleled Autonomy with the Precision of Smart Contracts.
-                                    </p>
+                                <div class="media-body">
+                                    <h5 class="mt-0 ">Private Sale- 10%</h5>
                                 </div>
                             </div>
                             <div class="media  media wow fadeInUp" data-wow-duration="2.0s" data-wow-delay=".3s">
-                                <img class="mr-3" src="assets/img/small-icon/1.png" alt="image" />
                                 <div class="media-body">
-                                    <h3 class="mt-0">Seize the Future of Possibilities</h3>
-                                    <p>
-                                        Grasp and Shape the Promising Landscape of Future Possibilities.
-                                    </p>
+                                    <h5 class="mt-0 ">Development- 10%</h5>
+                                </div>
+                            </div>
+                            <div class="media  media wow fadeInUp" data-wow-duration="2.0s" data-wow-delay=".3s">
+                                <div class="media-body">
+                                    <h5 class="mt-0 ">Partnership/Cex Listing- 10%</h5>
+                                </div>
+                            </div>
+                            <div class="media  media wow fadeInUp" data-wow-duration="2.0s" data-wow-delay=".3s">
+                                <div class="media-body">
+                                    <h5 class="mt-0 ">Staking- 5%</h5>
+                                </div>
+                            </div>
+                            <div class="media  media wow fadeInUp" data-wow-duration="2.0s" data-wow-delay=".3s">
+                                <div class="media-body">
+                                    <h5 class="mt-0 ">Airdrop- 5%</h5>
+                                </div>
+                            </div>
+                            <div class="media  media wow fadeInUp" data-wow-duration="2.0s" data-wow-delay=".3s">
+                                <div class="media-body">
+                                    <h5 class="mt-0 ">Burn- 10%</h5>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div>
         </div>
-    </section>-->
+    </section>
     <!-- About two Area End -->
 
     <!--Our Working Process Area Start -->
